package example.designpattern.structural.flyweight;

class BlackIgoChessman extends IgoChessman {
	public String getColor() {
		return "黑色";
	}
}