package example.designpattern.structural.flyweight;

/**
 * Created by lys on 5/6/2018.
 *
 * @author lys
 * @version 3.0.0-SNAPSHOT
 * @since 3.0.0-SNAPSHOT
 */
public class WhiteIgoChessman extends IgoChessman{
	@Override
	public String getColor() {
		return "白色";
	}
}
